apps/minio/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`minio.krabi.local`)
      priority: 10
      services:
        - name: minio
          port: 9000
    - kind: Rule
      match: Host(`s3.krabi.local`)
      priority: 11
      services:
        - name: minio
          port: 9001
  tls:
    secretName: minio-tls
